my profile user stats inner content in progress

--- a/my-profile.html
+++ b/my-profile.html
@@ -300,23 +300,19 @@
                 <div class="stats-box">
                   <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-4">
-                      <div class="stats-content push-left-8-percent hidden-xs">
+                      <div class="stats-content hidden-xs">
                         <!-- Nav tabs -->
                         <ul class="nav" role="tablist">
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-posts-icon.png">
+                          <li role="presentation" class="posts">
                             <a href="#posts" aria-controls="posts" role="tab" data-toggle="tab">Posts ( 20 )</a>
                           </li>
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-follow-posts-icon.png">
+                          <li role="presentation" class="follow-posts">
                             <a href="#follow-posts" aria-controls="follow-posts" role="tab" data-toggle="tab">Follow Posts ( 82 )</a>
                           </li>
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-favourite-posts-icon.png">
+                          <li role="presentation" class="favourite-posts">
                             <a href="#favourite-posts" aria-controls="favourite-posts" role="tab" data-toggle="tab">Favourite Posts ( 32 )</a>
                           </li>
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-likes-icon.png">
+                          <li role="presentation" class="likes">
                             <a href="#likes" aria-controls="likes" role="tab" data-toggle="tab">Likes ( 150 )</a>
                           </li>
                         </ul>
@@ -331,20 +327,17 @@
                     <div class="col-md-4 col-sm-4 col-xs-4">
                       <div class="stats-content hidden-xs">
                         <ul class="nav" role="tablist">
-                          <li role="presentation">
+                          <li role="presentation" class="followers">
                             <img class="img-responsive" src="images/user-stats-followers-icon.png">
                             <a href="#followers" aria-controls="followers" role="tab" data-toggle="tab">Followers ( 82 )</a>
                           </li>
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-answers-icon.png">
+                          <li role="presentation" class="answers">
                             <a href="#answers" aria-controls="answers" role="tab" data-toggle="tab">Best Answers ( 22 )</a>
                           </li>
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-followed-posts-icon.png">
+                          <li role="presentation" class="followed-posts">
                             <a href="#followed-posts" aria-controls="followed-posts" role="tab" data-toggle="tab">Followed Posts ( 32 )</a>
                           </li>
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-comments-icon.png">
+                          <li role="presentation" class="comments">
                             <a href="#comments" aria-controls="comments" role="tab" data-toggle="tab">Comments ( 39 )</a>
                           </li>
                         </ul>
@@ -366,36 +359,28 @@
                     <div class="col-xs-12">
                       <div class="stats-content"> 
                         <ul class="nav" role="tablist">
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-posts-icon.png">
+                          <li role="presentation" class="posts">
                             <a href="#posts" aria-controls="posts" role="tab" data-toggle="tab">Posts ( 20 )</a>
                           </li>
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-follow-posts-icon.png">
+                          <li role="presentation" class="follow-posts">
                             <a href="#follow-posts" aria-controls="follow-posts" role="tab" data-toggle="tab">Follow Posts ( 82 )</a>
                           </li>
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-favourite-posts-icon.png">
+                          <li role="presentation" class="favourite-posts">
                             <a href="#favourite-posts" aria-controls="favourite-posts" role="tab" data-toggle="tab">Favourite Posts ( 32 )</a>
                           </li>
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-likes-icon.png">
+                          <li role="presentation" class="likes">
                             <a href="#likes" aria-controls="likes" role="tab" data-toggle="tab">Likes ( 150 )</a>
                           </li>
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-followers-icon.png">
+                          <li role="presentation" class="followers">
                             <a href="#followers" aria-controls="followers" role="tab" data-toggle="tab">Followers ( 82 )</a>
                           </li>
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-answers-icon.png">
+                          <li role="presentation" class="answers">
                             <a href="#answers" aria-controls="answers" role="tab" data-toggle="tab">Best Answers ( 22 )</a>
                           </li>
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-followed-posts-icon.png">
+                          <li role="presentation" class="followed-posts">
                             <a href="#followed-posts" aria-controls="followed-posts" role="tab" data-toggle="tab">Followed Posts ( 32 )</a>
                           </li>
-                          <li role="presentation">
-                            <img class="img-responsive" src="images/user-stats-comments-icon.png">
+                          <li role="presentation" class="comments">
                             <a href="#comments" aria-controls="comments" role="tab" data-toggle="tab">Comments ( 39 )</a>
                           </li>
                         </ul>
@@ -409,7 +394,103 @@
               <div class="col-md-12">
                 <!-- Tab panes -->
                   <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane" id="posts">dfhcdidefjeifjeifejfwejfigh</div>
+                    <div role="tabpanel" class="tab-pane" id="posts">
+
+                      <div class="user-stats-item-block">
+                        <div class="user-stats-title">
+                          <img class="img-responsive" src="images/user-stats-posts-icon.png">
+                          <h4>3D Printing</h4>
+                        </div>
+                        <div class="user-stats-body">
+                          <p class="item-description">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat 
+                          ipsum, nec sagittis sem nibh Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, 
+                          Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequa ...</p>
+                          <div class="user-activity">
+                            <div class="row">
+                              <div class="col-md-8 col-sm-8 col-xs-12">
+                                <ul class="list-inline">
+                                  <li>
+                                    <span class="user-activity-action-icon">
+                                      <img src="images/user-activity-data-icon.png" class="img-responsive" alt="">
+                                    </span> 
+                                    <span class="user-activity-action">July 15, 2015</span>
+                                  </li>
+                                  <li>
+                                    <span class="user-activity-action-icon">
+                                      <img src="images/user-activity-comments-icon.png" class="img-responsive" alt="">
+                                    </span> 
+                                    <span class="user-activity-action">55 Comments</span>
+                                  </li>
+                                  <li>
+                                    <span class="user-activity-action-icon">
+                                      <img src="images/user-activity-like-icon.png" class="img-responsive" alt="">
+                                    </span> 
+                                    <span class="user-activity-action">30 Like</span>
+                                  </li>
+                                  <li>
+                                    <span class="user-activity-action-icon">
+                                      <img src="images/user-activity-shared-icon.png" class="img-responsive" alt="">
+                                    </span> 
+                                    <span class="user-activity-action">18 Shared</span>
+                                  </li>
+                                </ul>
+                              </div>
+                              <div class="col-md-4 col-sm-4 col-xs-12">
+                                <a class="btn btn-default pull-right" href="#" role="button">Continue reading</a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div><!-- user-stats-item-block -->
+
+                      <div class="user-stats-item-block">
+                        <div class="user-stats-title">
+                          <img class="img-responsive" src="images/user-stats-posts-icon.png">
+                          <h4>My  New Model </h4>
+                        </div>
+                        <div class="user-stats-body">
+                          <img src="images/gallery-img-6.jpg" class="img-responsive center-block photo-block" alt="">
+                          <p class="item-description">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat 
+                          ipsum, nec sagittis sem nibh Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor.</p>
+                          <div class="user-activity">
+                            <div class="row">
+                              <div class="col-md-8 col-sm-8 col-xs-12">
+                                <ul class="list-inline">
+                                  <li>
+                                    <span class="user-activity-action-icon">
+                                      <img src="images/user-activity-data-icon.png" class="img-responsive" alt="">
+                                    </span> 
+                                    <span class="user-activity-action">July 15, 2015</span>
+                                  </li>
+                                  <li>
+                                    <span class="user-activity-action-icon">
+                                      <img src="images/user-activity-comments-icon.png" class="img-responsive" alt="">
+                                    </span> 
+                                    <span class="user-activity-action">55 Comments</span>
+                                  </li>
+                                  <li>
+                                    <span class="user-activity-action-icon">
+                                      <img src="images/user-activity-like-icon.png" class="img-responsive" alt="">
+                                    </span> 
+                                    <span class="user-activity-action">30 Like</span>
+                                  </li>
+                                  <li>
+                                    <span class="user-activity-action-icon">
+                                      <img src="images/user-activity-shared-icon.png" class="img-responsive" alt="">
+                                    </span> 
+                                    <span class="user-activity-action">18 Shared</span>
+                                  </li>
+                                </ul>
+                              </div>
+                              <div class="col-md-4 col-sm-4 col-xs-12">
+                                <a class="btn btn-default pull-right" href="#" role="button">Continue reading</a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div><!-- user-stats-item-block -->
+
+                    </div>
                     <div role="tabpanel" class="tab-pane" id="follow-posts">fdgtjyjqrtr</div>
                     <div role="tabpanel" class="tab-pane" id="favourite-posts">rgtiyh6hngfnd</div>
                     <div role="tabpanel" class="tab-pane" id="likes">
@@ -449,16 +530,16 @@
                     <div class="sort-by push-bottom-30">
                       <form class="form-inline">
                         <div class="row">
-                          <div class="col-md-6 col-sm-6">
+                          <div class="col-md-6 col-sm-6 col-xs-6">
                             <ol class="breadcrumb">
                               <li><a href="#">Gallery</a></li>
-                              <li><a href="active">My Gallery</a></li>
+                              <li><a class="active" href="#">My Gallery</a></li>
                             </ol>
                           </div>
-                          <div class="col-md-6 col-sm-6">
+                          <div class="col-md-6 col-sm-6 col-xs-6">
                             <div class="pull-right">
                               <div class="form-group push-right-10">
-                                <label for="Sort by">Sort by</label>
+                                <label for="Sort by" class="hidden-xs">Sort by</label>
                                 <div id="gallery-sort">
                                   <select rv-value="truck.sort_id" class="btn-default"><span class="caret"></span>
                                     <option rv-each-sort="sort" rv-value="sort.id">{ sort.gallery_number }</option>
