my profile completed

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
       </section>
       <section>
-        <div class="content-list hidden-xs">
+        <div class="content-list">
           <div class="container">
 
             <!-- FOR REGISTERED USERS -->
@@ -186,179 +186,205 @@
             <!-- END FOR REGISTERED USERS -->
 
             <div class="row">
-              <div class="col-md-4 col-sm-4">
-                <h4>Popular forum topics</h4>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
+              <div class="col-md-12">
+                <div class="blue-bg">
+                  <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                      <div class="title-wrap">
+                        <ul class="list-inline">
+                          <li>
+                            <img src="images/icon-top-ratings.png" class="img-responsive" alt="">
+                          </li>
+                          <li>
+                            <h3>Top Users<br> Ratings</h3>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                      <div class="vertical-align-wrap">
+                        <div class="light-background push-right-20-percent pull-right">
+                          <div class="media">
+                            <div class="media-left media-middle">
+                              <img class="media-object dark-blue-border" src="images/user-photo-square-1.png" alt="">
+                            </div>
+                            <div class="media-body">
+                              <p>
+                                <a href="#" class="user-name">Natalia</a>
+                                <br>
+                                <span class="total-count">150</span>Likes
+                                <br>
+                                <span class="total-count">50</span>Posts
+                              </p>
+                            </div>
+                          </div><!-- media -->
+                          <div class="media top-users">
+                            <div class="media-left media-middle">
+                              <img class="media-object dark-blue-border" src="images/user-photo-square-2.png" alt="">
+                            </div>
+                            <div class="media-body">
+                              <p>
+                                <a href="#" class="user-name">Alena</a>
+                                <br>
+                                <span class="total-count">150</span>Likes
+                                <br>
+                                <span class="total-count">50</span>Posts
+                              </p>
+                            </div>
+                          </div><!-- media -->
+                          <div class="media top-users">
+                            <div class="media-left media-middle">
+                              <img class="media-object dark-blue-border" src="images/user-photo-square-3.png" alt="">
+                            </div>
+                            <div class="media-body">
+                              <p>
+                                <a href="#" class="user-name">Daniel</a>
+                                <br>
+                                <span class="total-count">150</span>Likes
+                                <br>
+                                <span class="total-count">50</span>Posts
+                              </p>
+                            </div>
+                          </div><!-- media -->
+                        </div><!-- light-background-wrap -->
+                      </div>
+                    </div>
                   </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
+                </div><!-- blue-bg-wrap -->
               </div>
-              <div class="col-md-4 col-sm-4">
-                <h4>Top Users Raitings</h4>
-                <div class="media top-users">
-                  <div class="media-left media-middle">
-                    <img class="media-object dark-blue-border" src="images/user-photo-square.png" alt="">
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <div class="blue-bg">
+                  <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                      <div class="vertical-align-wrap">
+                        <div class="light-background popular-topics push-left-20-percent pull-right">
+                          <a href="#" class="media">
+                            <div class="media-left media-middle">
+                              <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                            </div>
+                            <div class="media-body">
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                            </div>
+                          </a>
+                          <a href="#" class="media">
+                            <div class="media-left media-middle">
+                              <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                            </div>
+                            <div class="media-body">
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                            </div>
+                          </a>
+                          <a href="#" class="media">
+                            <div class="media-left media-middle">
+                              <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                            </div>
+                            <div class="media-body">
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                            </div>
+                          </a>
+                          <a href="#" class="media">
+                            <div class="media-left media-middle">
+                              <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                            </div>
+                            <div class="media-body">
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                            </div>
+                          </a>
+                          <a href="#" class="media">
+                            <div class="media-left media-middle">
+                              <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                            </div>
+                            <div class="media-body">
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                            </div>
+                          </a>
+                        </div><!-- light-background-wrap -->
+                      </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                      <div class="title-wrap">
+                        <ul class="list-inline">
+                          <li>
+                            <h3>Popular forum<br> topics</h3>
+                          </li>
+                          <li>
+                            <img src="images/icon-forum-topics.png" class="img-responsive" alt="">
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
                   </div>
-                  <div class="media-body">
-                    <p>
-                      <a href="#" class="user-name">Natalia</a>
-                      <span class="total-count">150</span>Likes
-                      <span class="total-count">50</span>Posts
-                    </p>
-                  </div>
-                </div><!-- media -->
-                <div class="media top-users">
-                  <div class="media-left media-middle">
-                    <img class="media-object dark-blue-border" src="images/user-photo-square.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>
-                      <a href="#" class="user-name">Alena</a>
-                      <span class="total-count">150</span>Likes
-                      <span class="total-count">50</span>Posts
-                    </p>
-                  </div>
-                </div><!-- media -->
-                <div class="media top-users">
-                  <div class="media-left media-middle">
-                    <img class="media-object dark-blue-border" src="images/user-photo-square.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>
-                      <a href="#" class="user-name">Daniel</a>
-                      <span class="total-count">150</span>Likes
-                      <span class="total-count">50</span>Posts
-                    </p>
-                  </div>
-                </div><!-- media -->
-                <div class="media top-users">
-                  <div class="media-left media-middle">
-                    <img class="media-object dark-blue-border" src="images/user-photo-square.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>
-                      <a href="#" class="user-name">Jonny25</a>
-                      <span class="total-count">150</span>Likes
-                      <span class="total-count">50</span>Posts
-                    </p>
-                  </div>
-                </div><!-- media -->
-                <div class="media top-users">
-                  <div class="media-left media-middle">
-                    <img class="media-object dark-blue-border" src="images/user-photo-square.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>
-                      <a href="#"><span class="user-name">Ben</span></a>
-                      <span class="total-count">150</span>Likes
-                      <span class="total-count">50</span>Posts
-                    </p>
-                  </div>
-                </div><!-- media -->
+                </div><!-- blue-bg-wrap -->
               </div>
-              <div class="col-md-4 col-sm-4">
-                <h4>Latest updates</h4>
-                <div class="media">
-                  <div class="media-left media-middle">
-                    <div class="media-object time">
-                      <span>11.25<br> am</span>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <div class="blue-bg">
+                  <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                      <div class="title-wrap">
+                        <ul class="list-inline">
+                          <li>
+                            <img src="images/icon-latest-updates.png" class="img-responsive" alt="">
+                          </li>
+                          <li>
+                            <h3>Latest <br> updates</h3>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                      <div class="vertical-align-wrap">
+                        <div class="light-background push-right-20-percent pull-right">
+                          <div class="media">
+                            <div class="media-left media-middle">
+                              <img class="media-object dark-blue-border" src="images/user-photo-square-1.png" alt="">
+                            </div>
+                            <div class="media-body">
+                              <p>
+                                <a href="#" class="user-name">Natalia</a>
+                                <br>
+                                <span>3D Ptinting</span>
+                                <br>
+                                <span><i>11.25 AM</i></span>
+                              </p>
+                            </div>
+                          </div><!-- media -->
+                          <div class="media top-users">
+                            <div class="media-left media-middle">
+                              <img class="media-object dark-blue-border" src="images/user-photo-square-2.png" alt="">
+                            </div>
+                            <div class="media-body">
+                              <p>
+                                <a href="#" class="user-name">Alena</a>
+                                <br>
+                                <span>3D Ptinting</span>
+                                <br>
+                                <span><i>10.00 AM</i></span>
+                              </p>
+                            </div>
+                          </div><!-- media -->
+                          <div class="media top-users">
+                            <div class="media-left media-middle">
+                              <img class="media-object dark-blue-border" src="images/user-photo-square-3.png" alt="">
+                            </div>
+                            <div class="media-body">
+                              <p>
+                                <a href="#" class="user-name">Daniel</a>
+                                <br>
+                                <span>3D Ptinting</span>
+                                <br>
+                                <span><i>8.00 AM</i></span>
+                              </p>
+                            </div>
+                          </div><!-- media -->
+                        </div><!-- light-background-wrap -->
+                      </div>
                     </div>
                   </div>
-                  <div class="media-body">
-                    <p>
-                      <a href="#" class="user-name">Natalia</a>
-                      <span>3D Ptinting</span>
-                    </p>
-                  </div>
-                </div><!-- media -->
-                <div class="media">
-                  <div class="media-left media-middle">
-                    <div class="media-object time">
-                      <span>11.25<br> am</span>
-                    </div>
-                  </div>
-                  <div class="media-body">
-                    <p>
-                      <a href="#" class="user-name">Alena</a>
-                      <span>3D Ptinting</span>
-                    </p>
-                  </div>
-                </div><!-- media -->
-                <div class="media">
-                  <div class="media-left media-middle">
-                    <div class="media-object time">
-                      <span>11.25<br> am</span>
-                    </div>
-                  </div>
-                  <div class="media-body">
-                    <p>
-                      <a href="#" class="user-name">Daniel</a>
-                      <span>3D Ptinting</span>
-                    </p>
-                  </div>
-                </div><!-- media -->
-                <div class="media">
-                  <div class="media-left media-middle">
-                    <div class="media-object time">
-                      <span>11.25<br> am</span>
-                    </div>
-                  </div>
-                  <div class="media-body">
-                    <p>
-                      <a href="#" class="user-name">Jonny25</a>
-                      <span>3D Ptinting</span>
-                    </p>
-                  </div>
-                </div><!-- media -->
-                <div class="media">
-                  <div class="media-left media-middle">
-                    <div class="media-object time">
-                      <span>11.25<br> am</span>
-                    </div>
-                  </div>
-                  <div class="media-body">
-                    <p>
-                      <a href="#"><span class="user-name">Ben</span></a>
-                      <span>3D Ptinting</span>
-                    </p>
-                  </div>
-                </div><!-- media -->
+                </div><!-- blue-bg-wrap -->
               </div>
             </div>
           </div>
